--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
+# Build output
+.next/
+out/
+dist/
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files
-.env*
+# Local env files
+.env
+.env.*.local
+.env.local
 
-# vercel
-.vercel
+# OS files
+.DS_Store
+Thumbs.db
 
-# typescript
-*.tsbuildinfo
+# VSCode settings
+.vscode/
+
+# Coverage
+coverage/
+
+# Optional: Ignore database dumps/backups
+dump/
+*.bak
+
+# Optional: Ignore uploads if you store files locally
+/public/uploads/
+
+
+.vercel/
 next-env.d.ts
